--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a {
 </style>
 </head>
 <body>
-	<script type="text/javascript">
+	<script type="text/javascript" lazyload="yes">
 		document.oncontextmenu = function(e) {
 			e.preventDefault();
 			return false;
