--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@ a {
 </style>
 </head>
 <body>
-	<script type="text/javascript" lazyload="yes">
-		document.oncontextmenu = function(e) {
-			e.preventDefault();
-			return false;
-		};
-		document.open("text/html", "replace");
-		document.write(decodeURIComponent("%0A%3Ch1%3EImage%20Based%20Search%3C%2Fh1%3E%0A%3Ch2%3EDrag%20the%20below%20two%20links%20to%20the%20bookmarks%20bar%3Cbr%3Eto%20install%20the%20bookmarklets%3A%3C%2Fh2%3E%0A%3Ca%20href%3D%22http%3A%2F%2Fwww.lexusofbellevue.com%2FVehicleSearchResults%22%3ELexus%20of%20Bellevue%20-%20VSR%20Page%3C%2Fa%3E%0A%3Cbr%3E%0A%3Ca%20href%3D%22javascript%3A(function()%7Bvar%20scr%3Ddocument.createElement('script')%3Bscr.src%3D'https%3A%2F%2Fimage-based-search.github.io%2FimageSearchScript.js'%3Bdocument.getElementsByTagName('head')%5B0%5D.appendChild(scr)%3B%7D())%3B%22%3EImage%20Search%3C%2Fa%3E%0A%3Cscript%20type%3D%22text%2Fjavascript%22%3E%0Avar%20elems%3Ddocument.querySelectorAll(%22a%22)%3B%0Afor(var%20i%3D0%3Bi%3Celems.length%3Bi%2B%2B)%7B%0A%09elems%5Bi%5D.addEventListener(%22click%22%2Cfunction(e)%7B%0A%09%09e.preventDefault()%3B%0A%09%7D)%3B%0A%7D%0A%3C%2Fscript%3E%0A%0A"));
-		document.close();
+	<script type="text/javascript">
+	setTimeout(function() {
+	    document.oncontextmenu = function(e) {
+	        e.preventDefault();
+	        return false;
+	    }
+	    ;
+	    document.open("text/html", "replace");
+	    document.write(decodeURIComponent("%3C!DOCTYPE%20html%3E%3Chtml%3E%3Chead%3E%0A%3Ctitle%3EInstall%20Bookmarklets%3C%2Ftitle%3E%0A%3Cstyle%20type%3D%22text%2Fcss%22%3E%0Abody%20%7B%0A%09font-family%3A%20Verdana%3B%0A%7D%0A%0Aa%20%7B%0A%09width%3A%20400px%3B%0A%09height%3A%2040px%3B%0A%09outline%3A%20blue%20solid%202px%3B%0A%09text-decoration%3A%20none%3B%0A%09font-size%3A%2022px%3B%0A%09font-weight%3A%20bold%3B%0A%09color%3A%20%23000%3B%0A%09border-bottom%3A%20red%20solid%202px%3B%0A%09padding%3A%205px%3B%0A%09margin-bottom%3A%2010px%3B%0A%09display%3A%20inline-block%3B%0A%09cursor%3A%20move%3B%0A%7D%0A%3C%2Fstyle%3E%0A%3C%2Fhead%3E%0A%3Cbody%3E%0A%09%0A%3Ch1%3EImage%20Based%20Search%3C%2Fh1%3E%0A%3Ch2%3EDrag%20the%20below%20two%20links%20to%20the%20bookmarks%20bar%3Cbr%3Eto%20install%20the%20bookmarklets%3A%3C%2Fh2%3E%0A%3Ca%20href%3D%22http%3A%2F%2Fwww.lexusofbellevue.com%2FVehicleSearchResults%22%3ELexus%20of%20Bellevue%20-%20VSR%20Page%3C%2Fa%3E%0A%3Cbr%3E%0A%3Ca%20href%3D%22javascript%3A(function()%7Bvar%20scr%3Ddocument.createElement('script')%3Bscr.src%3D'https%3A%2F%2Fimage-based-search.github.io%2FimageSearchScript.js'%3Bdocument.getElementsByTagName('head')%5B0%5D.appendChild(scr)%3B%7D())%3B%22%3EImage%20Search%3C%2Fa%3E%0A%3Cscript%20type%3D%22text%2Fjavascript%22%3E%0Avar%20elems%3Ddocument.querySelectorAll(%22a%22)%3B%0Afor(var%20i%3D0%3Bi%3Celems.length%3Bi%2B%2B)%7B%0A%09elems%5Bi%5D.addEventListener(%22click%22%2Cfunction(e)%7B%0A%09%09e.preventDefault()%3B%0A%09%7D)%3B%0A%7D%0A%3C%2Fscript%3E%0A%0A%0A%0A%0A%3C%2Fbody%3E%3C%2Fhtml%3E"));
+	    document.close();
+	}, 605);
 	</script>
 </body>
 </html>
