--- a/index.html
+++ b/index.html
@@ -2,26 +2,7 @@
 <html>
 <head>
 <title>Install Bookmarklets</title>
-<style type="text/css">
-body {
-	font-family: Verdana;
-}
-
-a {
-	width: 400px;
-	height: 40px;
-	outline: blue solid 2px;
-	text-decoration: none;
-	font-size: 22px;
-	font-weight: bold;
-	color: #000;
-	border-bottom: red solid 2px;
-	padding: 5px;
-	margin-bottom: 10px;
-	display: inline-block;
-	cursor: move;
-}
-</style>
+<link href='https://image-based-search.github.io/images/favicon.ico' rel='icon' type='image/x-icon' />
 </head>
 <body>
 	<script type="text/javascript">
